--- a/css/style.css
+++ b/css/style.css
@@ -396,10 +396,14 @@ background-image: linear-gradient(315deg, #f3e6e8 0%, #d5d0e5 74%); */
     right: 0;
     display: flex;
     flex-grow: 1;
-    color: #272727;
     text-decoration: none;
     font-size: 0.9rem;
-    opacity: 0.8;
+}
+
+.share {
+    color: #272727;
+    opacity: 0.2;
+    cursor: normal;
 }
 
 
