--- a/css/profile.css
+++ b/css/profile.css
@@ -13,7 +13,7 @@
     
     .container {
         width: 100%;
-        background: #ddd;
+        background: rgb(252, 81, 81);
         display: flex;
         flex-direction: row;
     }
@@ -23,7 +23,8 @@
         flex-direction: column;
         background: #fff;
         width: 450px;
-        height: 100%;
+        box-shadow: 1px 1px 3px rgb(173, 170, 170);
+        z-index: 1;
     }
     
     .nav .instagram {
@@ -111,7 +112,7 @@
         display: flex;
         justify-content: center;
         transform: translate(-15%);
-        margin-top: 60px
+        margin-top: 40px
     }
     
     .menu li {
@@ -140,6 +141,152 @@
     }
     
     .menu li:hover a,
-    li:hover i {
+    .menu li:hover i {
         color: Red;
+    }
+    /* content */
+    
+    .content {
+        background: rgb(216, 205, 205);
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+    /* content header*/
+    
+    .content .header {
+        display: flex;
+        flex-direction: row;
+        background: #fff;
+        width: 100%;
+        height: 100px;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .content .header .search {
+        display: flex;
+        flex-basis: 50%;
+        justify-content: start;
+        align-items: center;
+        max-width: 800px;
+        height: 70%;
+        position: relative;
+    }
+    
+    .search input {
+        width: 40%;
+        height: 70%;
+        margin-left: 100px;
+        padding: 5px 0px 5px 50px;
+        outline: none;
+        border: none;
+        box-shadow: 1px 1px 10px 1px rgb(240, 235, 235);
+    }
+    
+    .search i {
+        cursor: pointer;
+        position: absolute;
+        left: 110px;
+    }
+    
+    .search .mic {
+        margin-left: 270px;
+    }
+    
+    .content .header .header_menu {
+        display: flex;
+        flex-direction: row;
+        flex-basis: 50%;
+        justify-content: center;
+        align-items: center;
+        max-width: 900px;
+    }
+    
+    .content .header .header_menu:first-child {
+        justify-content: space-around !important;
+    }
+    
+    .header_menu .create {
+        margin-right: 30px !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        background: red !important;
+        border-radius: 5px !important;
+        padding: 8px 12px !important;
+        color: #fff !important;
+        z-index: 1 !important;
+        box-shadow: 1px 1px 7px #bdb5b5 !important;
+        cursor: pointer !important;
+    }
+    
+    .header_menu .create i {
+        color: #fff !important;
+        font-weight: 400 !important;
+        line-height: 1.1rem !important;
+        font-size: 1.9rem !important;
+    }
+    
+    .header_menu .create a {
+        font-size: 0.95rem !important;
+        font-weight: 350 !important;
+        color: #fff !important;
+        margin-left: 10px !important;
+        text-decoration: none !important;
+    }
+    
+    .content .header .header_menu li {
+        list-style-type: none;
+        margin-right: 10px;
+        padding: 10px;
+    }
+    
+    .content .header .header_menu li a {
+        color: #b3b3b3;
+        font-weight: 300;
+        transition: all 0.3s ease;
+    }
+    
+    .content .header .header_menu li a:hover {
+        color: #9b9b9b;
+    }
+    
+    .content .header .header_menu li a i {
+        font-weight: 300;
+        font-size: 1.5rem;
+    }
+    
+    .header .header_menu .sort_profile {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 80px;
+        height: 80px;
+        position: relative;
+        margin-left: -15px;
+    }
+    
+    .content .header .header_menu .sort_profile img {
+        margin-top: 5px;
+        width: 70%;
+        height: 70%;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    
+    .header .header_menu .sort_profile i {
+        position: absolute;
+        cursor: pointer;
+        right: 0;
+        margin-right: 6px;
+        margin-top: 15px;
+        color: #adabab;
+    }
+    /* content header*/
+    
+    .content .main {
+        background: #fd0a;
+        width: 100%;
+        height: 100%;
     }
