--- a/css/profile.css
+++ b/css/profile.css
@@ -289,17 +289,18 @@
     /* content header*/
     
     .content .main {
-        background: #fd0a;
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: row;
     }
     
-    .main #main {
+    #main {
         display: flex;
-        background: rgba(245, 50, 118, 0);
+        background: rgba(63, 63, 63, 0);
         width: 75%;
+        height: 100%;
+        background: #fd0a;
     }
     
     .main .main_profile {
