--- a/css/profile.css
+++ b/css/profile.css
@@ -10,6 +10,26 @@
         width: 100%;
         height: 100vh;
     }
+    /* width */
+    
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    /* Track */
+    
+     ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+    /* Handle */
+    
+     ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+    /* Handle on hover */
+    
+     ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
     
      :root {
         --boldred: #f016;
@@ -311,12 +331,6 @@
         overflow: hidden;
     }
     
-    .main .main_profile {
-        display: flex;
-        width: 25%;
-        background: #f016;
-    }
-    
     .main .main_box1 {
         width: 100%;
         display: flex;
@@ -387,5 +401,89 @@
         width: 200px;
         border-radius: 7px;
         height: 250px;
+        cursor: pointer;
         box-shadow: 1px 0.8px 5px #9b9999;
+    }
+    /* main profile*/
+    
+    .main .main_profile {
+        display: flex;
+        width: 400px;
+        /* background: #f016; */
+        background: #fff;
+        flex-direction: column;
+        padding: 20px;
+        align-items: center;
+    }
+    
+    .main_profile_img {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .main_profile_img img {
+        border-radius: 4px;
+    }
+    
+    .main_profile_title {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 1rem;
+    }
+    
+    .main_profile_title h2 {
+        margin-top: 20px;
+        font-weight: 400;
+        text-transform: capitalize;
+        font-size: 1.7rem;
+    }
+    
+    .main_social {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;
+        margin: 3px 0px 15px 0px;
+    }
+    
+    .main_social p:nth-child(2) {
+        margin-left: 20px;
+    }
+    
+    .main_social p {
+        opacity: 0.7;
+    }
+    
+    .main_social p span {
+        opacity: 1 !important;
+        font-weight: 600;
+    }
+    
+    .main_profile_content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0.6;
+    }
+    
+    .location_box {
+        width: 100%;
+        margin: 20px 0px;
+    }
+    
+    .location_box span {
+        font-weight: 600;
+        opacity: 0.7;
+        font-size: 1rem;
+    }
+    
+    .location_box p {
+        opacity: 0.6;
+    }
+    
+    .lastBox img {
+        height: 20px;
     }
